packages/svelte/tests/validator/samples/export-not-defined-module-with-source/input.svelte
<script module>
	export { something } from "./something.js";
</script>
