packages/svelte/tests/compiler-errors/samples/export-not-defined-module/main.svelte
<script module>
	export { blah };
</script>
